k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: affine-deployment
  labels:
    app: affine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: affine
  template:
    metadata:
      labels:
        app: affine
    spec:
      containers:
        - name: affine
          image: eligetipavankumar/affine:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: affine-service
spec:
  selector:
    app: affine
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort
